# Google-Cloud-Hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: settings.py
frontend/: app.js  index.html  styles.css
presentation/: Fashion Finder - The Journey.htm
presentation/Fashion Finder - The Journey_files/: css2.css
scripts/: ingest_dataset.py  test_query.py  verify_index.py
src/api/: main.py  schemas.py
src/api/routes/: health.py  images.py  search.py
src/features/: __init__.py  feature_builder.py
src/models/: __init__.py  color_extractor.py  embedder.py  segmentor.py  shape_extractor.py  texture_extractor.py
src/pipeline/: __init__.py  ingest_pipeline.py  query_pipeline.py
src/vector_store/: __init__.py  pinecone_client.py
