[project]
name = "fashion-finder"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "transformers>=4.40.0",
    "rembg>=2.0.57",
    "Pillow>=10.0.0",
    "scikit-learn>=1.4.0",
    "scikit-image>=0.22.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.0",
    "pinecone>=3.0.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
]
